<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background_shape"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateServiceReqActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_details"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:gravity="center_horizontal"
            android:layout_marginVertical="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/requesting_service"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/requester_position"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_method"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine|textMultiLine"
                android:hint="@string/brief_description_about_request"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/save"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>