<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

        <Button
            android:id="@+id/More"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
           android:layout_margin="10dp"
            android:text="@string/more_details"
            android:background="#00E2FF"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request"
                android:textSize="22sp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:id="@+id/Service">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:textStyle="italic"
                android:id="@+id/Description">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>