<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_shape"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"/>

        <!--  register tag-->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-50dp"
                android:text="@string/register"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <!--forgot password tag-->
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-27dp"
            android:layout_marginStart="170dp"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>