<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/LogoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/alpha" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AddReqBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="136dp"
        android:text="@string/add_request"
        android:layout_centerInParent="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RequestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddReqBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="133dp"
        android:text="@string/requests" />

</RelativeLayout>